--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <title>Cat Photos</title>
+    <title>CatPhotoApp</title>
 <body>
     <main>
         <h1>CatPhotoApp</h1>
@@ -34,6 +34,16 @@
                 alt="A slice of lasagna on a plate.">
                 <figcaption>Cats <em>love</em> lasagna</figcaption>
             </figure>
+            <h3>Top 3 things cats hate:</h3>
+        <ol>
+          <li>flea treatment</li>
+          <li>thunder</li>
+          <li>other cats</li>
+        </ol>
+        <figure>
+            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Two tabby kittens sleeping together on a couch.">
+            <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
+          </figure>
         </section>
 
         <section>
@@ -44,10 +54,21 @@
                 <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor"> Indoor </label>
                 <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor"> Outdoor </label>
             </fieldset>
+            <fieldset>
+                <legend>What's your cat's personality?</legend>
+                <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
+                <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
+                <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
+              </fieldset>
                 <input type="text" name="catphotourl" placeholder="cat photo URL" required>
                 <button type="submit">Submit</button>
             </form>
         </section>
     </main>
+    <footer>
+        <p>
+            No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
+        </p>
+    </footer>
 </body>
 </html>
