--- a/CatPhotos/index.html
+++ b/CatPhotos/index.html
@@ -42,7 +42,8 @@
         </ol>
         <figure>
             <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Two tabby kittens sleeping together on a couch.">
-            <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
+            <figcaption>Cats <str
+                ong>hate</strong> other cats.</figcaption>  
           </figure>
         </section>
 
