--- a/CatPhotos/index.html
+++ b/CatPhotos/index.html
@@ -23,7 +23,7 @@
 
         <section> 
             <h2>Cat Lists</h2>
-            <h3>Things Zcats love:</h3>
+            <h3>Things cats love:</h3>
             <ul> 
                 <li>catnip</li>
                 <li>laser pointers</li>
