--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,29 +14,49 @@
                 <a href="#welcome-section">About</a>
             </li>
             <li>
-                <a href="#projects">Works</a>
+                <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="contact">Contacts</a>
+                <a href="#contact">Contacts</a>
             </li>
         </ul>
     </nav>
 
-    <!-- Welcome Section -->
+    <!-- Welcome Section --> 
     <section id="welcome-section">
-        <h1>Hi, My Name is Marc Oducayen!</h1>
+        <h2>Hi, My name is...</h2>
+        <h1>Marc Oducayen</h1>
+        <p>An aspiring Web Developer that is currently taking Bachelor of Science in Information Technology, Majoring in Web Technology in University of the Cordilleras</p>
     </section>    
+
 
     <!-- Project Section -->
      <section id="projects">
-        <h2>These are some of my projects</h2>
-        <a href="" class="project-tile">Survey Form</a>
-        <a href="" class="project-tile">Tribute Page</a>
-        <a href="" class="project-tile">Technical Documentation</a>
-        <a href="" class="project-tile">Product Landing</a>
+        <h2>Projects</h2>
+        <p>View some of my works...</p>
+        <div class="project-tile">
+        <a href="https://surveyform-theta.vercel.app/" target="_blank">
+            <img src="survey.png" class="project-image" alt="Survey Form">
+            <p class="project-name">Survey Form</p>
+        </a>
+        <a href="https://tribute-page-six-kappa.vercel.app/" target="_blank">
+            <img src="trib.png" class="project-image" alt="Tribute Page">
+            <p class="project-name">Tribute Page</p>
+        </a>
+        <a href="https://technical-documentation-lac.vercel.app/" target="_blank">
+            <img src="tech doc.png" class="project-image" alt="Technical Document">
+            <p class="project-name">Technical Document</p>
+        </a>
+        <a href="https://product-landing-jade.vercel.app/" target="_blank">
+            <img src="pl.png" class="project-image" alt="Product Landing">
+            <p class="project-name">Product Landing Page</p>
+        </a>
      </section>
+    </div>
 
      <section id="contact">
+        <h2>Contacts</h2>
+        <p>Here are my contacts...</p>
         <a href="" id="profile-link" target="_blank"></a>
      </section>
 </body>
