--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -26,7 +26,8 @@
     <section id="welcome-section">
         <h2>Hi, My name is...</h2>
         <h1>Marc Oducayen</h1>
-        <p>An aspiring Web Developer that is currently taking Bachelor of Science in Information Technology, Majoring in Web Technology in University of the Cordilleras</p>
+        <p>An aspiring Web Developer</p>
+        <p>Taking Bachelor of Science in Information Technology, Majoring in Web Technology in the University of the Cordilleras</p>
     </section>    
 
 
@@ -37,27 +38,38 @@
         <div class="project-tile">
         <a href="https://surveyform-theta.vercel.app/" target="_blank">
             <img src="survey.png" class="project-image" alt="Survey Form">
-            <p class="project-name">Survey Form</p>
+            <p class="project-name1">Survey Form</p>
         </a>
         <a href="https://tribute-page-six-kappa.vercel.app/" target="_blank">
             <img src="trib.png" class="project-image" alt="Tribute Page">
-            <p class="project-name">Tribute Page</p>
+            <p class="project-name2">Tribute Page</p>
         </a>
         <a href="https://technical-documentation-lac.vercel.app/" target="_blank">
             <img src="tech doc.png" class="project-image" alt="Technical Document">
-            <p class="project-name">Technical Document</p>
+            <p class="project-name3">Technical Document</p>
         </a>
         <a href="https://product-landing-jade.vercel.app/" target="_blank">
             <img src="pl.png" class="project-image" alt="Product Landing">
-            <p class="project-name">Product Landing Page</p>
+            <p class="project-name4">Product Landing Page</p>
         </a>
      </section>
     </div>
 
      <section id="contact">
         <h2>Contacts</h2>
-        <p>Here are my contacts...</p>
-        <a href="" id="profile-link" target="_blank"></a>
+        <p>Contact me through...</p>
+
+        <div class="icon-container">
+        <a href="https://github.com/MERO711/UCCITCSWeb240019569.git" id="profile-link" target="_blank">
+            <img src="github.png" alt="Github link" class="contact-image">
+        </a>
+        <a href="https://www.instagram.com/m_oducayen11?igsh=MWx3N2R0cG00ZzA4bw==">
+            <img src="ig.png" alt="Contact Number" class="contact-image">
+        </a>
+        <a href="mailto:meroducayen711@gmail.com">
+            <img src="gmail.png" alt="Email" class="contact-image">
+        </a>
+        </div>
      </section>
 </body>
 </html>
